infrastructure/kubernetes/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-tellme-client
  namespace: prod-tellme
  labels:
    run: service-tellme-client
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    run: deployment-tellme-client
