infrastructure/kubernetes/client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tellme-client
  namespace: prod-tellme
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"

    # certificates
    cert-manager.io/cluster-issuer: "issuer-letsencrypt"
    kubernetes.io/ingress.class: "nginx"

    # cors
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, PATCH, OPTIONS, HEAD"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "false"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tellme.wetambara.com
      secretName: secret-client-letsencrypt
  rules:
    - host: tellme.wetambara.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-tellme-client
                port:
                  number: 80
